feat(tests): Add tests and test data, update response
