# run.py
@@ -5,25 +5,27 @@ import datetime
 def post_greeting(name: str):
     return f"Hello {name}", 200
 
+
 def add_metric(body):
 
-    # Validate the input data, ideally this is also done via the API docs marking fields as required 
+    # Validate the input data, ideally this is also done via the API docs marking fields as required
     if not all(key in body for key in ("sensor_id", "metric", "value", "unit_of_measurement", "timestamp")):
         return {'message': 'Missing a key'}, 400
-    
+
     # Validate the timestamp
     try:
         datetime.datetime.strptime(body['timestamp'], '%Y-%m-%dT%H:%M:%S.%fZ')
     except ValueError:
         return {'message': 'Incorrect timestamp format, should be YYYY-MM-DDTHH:MM:SS.mmmZ'}, 400
-    
-    # Add the data to the database
+
+    #  Add the data to the database
     new_data = SensorData(
         sensor_id=body['sensor_id'],
         metric=body['metric'],
         value=body['value'],
         unit_of_measurement=body['unit_of_measurement'],
-        timestamp=datetime.datetime.strptime(body['timestamp'], '%Y-%m-%dT%H:%M:%S.%fZ')
+        timestamp=datetime.datetime.strptime(
+            body['timestamp'], '%Y-%m-%dT%H:%M:%S.%fZ')
     )
     db.session.add(new_data)
     db.session.commit()
@@ -36,32 +38,39 @@ def query_metric(sensor_ids: list, metrics: list, statistic='average', date_rang
         start_date = datetime.datetime.now() - datetime.timedelta(days=1)
         end_date = datetime.datetime.now()
     else:
-        start_date, end_date = map(lambda x: datetime.datetime.strptime(x, '%Y-%m-%d'), date_range.split(':'))
+        start_date, end_date = map(lambda x: datetime.datetime.strptime(
+            x, '%Y-%m-%d'), date_range.split(':'))
 
     # Query the database, the reason I used SQLAlchemy shines here as I can use the ORM to query the database
-    # without having to write any SQL myself
+    #  without having to write any SQL myself
     data = SensorData.query.filter(
         SensorData.sensor_id.in_(sensor_ids),
         SensorData.metric.in_(metrics),
         SensorData.timestamp.between(start_date, end_date)
     ).all()
     # Prepare the results based on the statistic requested
-    result = {}
-
+    result = {
+        "sensors": {}
+    }
     # Add metrics to the result
     for m in metrics:
-        # Gather all values for the given metric m as a list so we can do sums,avgs,mins and maxs on them
+        #  Gather all values for the given metric m as a list so we can do sums,avgs,mins and maxs on them
         values = [d.value for d in data if d.metric == m]
         if values:
             if statistic == 'min':
-                result[m] = min(values)
+                result["sensors"][m] = {
+                    "statistic": "min", "value": min(values)}
             elif statistic == 'max':
-                result[m] = max(values)
+                result["sensors"][m] = {
+                    "statistic": "max", "value": max(values)}
             elif statistic == 'sum':
-                result[m] = sum(values)
+                result["sensors"][m] = {
+                    "statistic": "sum", "value": sum(values)}
             else:
-                result[m] = sum(values) / len(values)
+                result["sensors"][m] = {
+                    "statistic": "average", "value": sum(values) / len(values)}
         else:
-            result[m] = None  # or some default value or message indicating no data found
+            # or some default value indicating no data found
+            result["sensors"][m] = {"value": None}
 
     return result
